Bug 1304081 - Add more use of shouldCancel() to avoid pauses when cancelling off thread Ion compilation r=nbp